--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-share-social": "^0.1.55",
     "react-snowfall": "^1.2.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
