--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-share-social": "^0.1.55",
     "react-snowfall": "^1.2.1",
     "sass": "^1.69.5",
+    "swiper": "^11.0.4",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
