--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
     "next": "14.0.0",
     "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "react-share-social": "^0.1.55",
     "react-snowfall": "^1.2.1",
     "sass": "^1.69.5",
