--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-share-social": "^0.1.55",
     "react-snowfall": "^1.2.1",
