--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "js-cookie": "^3.0.5",
     "next": "14.0.0",
     "next-share": "^0.27.0",
     "react": "^18",
@@ -24,6 +26,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
