--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prestaging": "rm -rf ./_static && rm -rf ../out && npm run build  ",
+    "staging": "scp -r ./_static/* nissar@217.19.214.__:/var/www/",
+    "predeploy": "rm -rf ./_static &&  npm run build && next export -o _static ",
+    "deploy": "scp -r ./_static/* nissar@217.19.214.__:/var/www/",
     "start": "next start",
     "lint": "next lint"
   },
