--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "prestaging": "rm -rf ./_static && rm -rf ../out && npm run build  ",
-    "staging": "scp -r ./_static/* nissar@217.19.214.__:/var/www/",
-    "predeploy": "rm -rf ./_static &&  npm run build && next export -o _static ",
+    "staging": "scp -r ./out/* nissar@217.19.214.33:/var/www/1415-dev.idc.md",
+    "predeploy": "rm -rf ./out &&  npm run build && next export -o _static ",
     "deploy": "scp -r ./_static/* nissar@217.19.214.__:/var/www/",
     "start": "next start",
     "lint": "next lint"
