--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "routes": "next-nginx-routes",
     "prestaging": "rm -rf ./_static && rm -rf ../out && npm run build  ",
     "staging": "scp -r ./out/* nissar@217.19.214.33:/var/www/1415-dev.idc.md",
     "predeploy": "rm -rf ./out &&  npm run build && next export -o _static ",
@@ -18,6 +19,7 @@
     "classnames": "^2.3.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.0",
+    "next-nginx-routes": "^1.2.1",
     "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
