--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
-    "react-share-social": "^0.1.55",
     "react-snowfall": "^1.2.1",
     "sass": "^1.69.5",
+    "sharer.js": "^0.5.1",
     "swiper": "^11.0.4",
     "usehooks-ts": "^2.9.1"
   },
